--- a/Projeto Café/Cafe/Cafe.vcxproj
+++ b/Projeto Café/Cafe/Cafe.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="Creme.h" />
     <ClInclude Include="Leite.h" />
     <ClInclude Include="Maquina.h" />
+    <ClInclude Include="Moeda.h" />
     <ClInclude Include="Preto.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
