--- a/Projeto Café/Cafe/Cafe.vcxproj.filters
+++ b/Projeto Café/Cafe/Cafe.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Leite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Moeda.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
