--- a/tddEx/pom.xml
+++ b/tddEx/pom.xml
@@ -22,5 +22,12 @@
 		    <version>1.2.3</version>
 		    <scope>test</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>excatolica</groupId>
+	  <artifactId>excatolica</artifactId>
+	  <version>1.0-SNAPSHOT</version>
+	  <scope>test</scope>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 </project>
