--- a/bddEx/pom.xml
+++ b/bddEx/pom.xml
@@ -12,7 +12,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-java8</artifactId>
+			<artifactId>cucumber-java</artifactId>
 			<version>1.2.4</version>
 			<scope>test</scope>
 		</dependency>
@@ -22,12 +22,5 @@
 		    <version>1.2.3</version>
 		    <scope>test</scope>
 		</dependency>
-	 <dependency>
-	  <groupId>excatolica</groupId>
-	  <artifactId>excatolica</artifactId>
-	  <version>1.0-SNAPSHOT</version>
-	  <scope>test</scope>
-	  <type>jar</type>
-	 </dependency>
 	</dependencies>
 </project>
